Update Gestor.java